[gd_scene load_steps=3 format=3 uid="uid://degps1jxhx4fm"]

[ext_resource type="StyleBox" uid="uid://dqccaput2wseh" path="res://ui/PanelTheme.tres" id="1_0rx7d"]
[ext_resource type="Script" uid="uid://jy16pfigbm1i" path="res://scenes/vault/VaultItemEditor.gd" id="1_mepyp"]

[node name="VaultItemEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mepyp")

[node name="HeaderBar" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.15

[node name="TitleLabel" type="Label" parent="HeaderBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.177
anchor_right = 0.96500003
anchor_bottom = 0.63900006
offset_left = 0.040000916
offset_top = 0.02399826
offset_right = -0.20007324
offset_bottom = -0.03201294
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="HeaderBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.776
anchor_right = 0.96500003
anchor_bottom = 1.0
offset_left = 0.040000916
offset_top = 14.511993
offset_right = -0.20007324
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="ContentArea" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.85

[node name="NameEdit" type="LineEdit" parent="ContentArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_right = 0.96500003
anchor_bottom = 1.0
offset_left = 0.040000916
offset_right = -0.20007324
offset_bottom = -1180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
placeholder_text = "Item Name"

[node name="TypeFieldsPanel" type="Control" parent="ContentArea"]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 1.0

[node name="LoginFields" type="Control" parent="ContentArea/TypeFieldsPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UsernameEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.081
anchor_right = 0.36
anchor_bottom = 0.081
offset_left = -349.92
offset_top = 14.865593
offset_right = 350.08
offset_bottom = 143.8656
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")

[node name="PasswordEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.28800002
anchor_right = 0.36
anchor_bottom = 0.28800002
offset_left = -349.92
offset_top = 0.38876343
offset_right = 350.08
offset_bottom = 129.38873
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
secret = true

[node name="URLEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.462
anchor_right = 0.36
anchor_bottom = 0.462
offset_left = -349.92
offset_top = 12.611206
offset_right = 350.08
offset_bottom = 141.6112
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")

[node name="UsernameLabel" type="Label" parent="ContentArea/TypeFieldsPanel/LoginFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.128
anchor_right = 0.128
offset_left = -124.41601
offset_top = 0.3999939
offset_right = 124.58399
offset_bottom = 69.399994
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Username"

[node name="PasswordLabel" type="Label" parent="ContentArea/TypeFieldsPanel/LoginFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.120000005
anchor_top = 0.21700001
anchor_right = 0.120000005
anchor_bottom = 0.21700001
offset_left = -116.64001
offset_top = 0.49917603
offset_right = 116.35999
offset_bottom = 71.499176
theme_override_font_sizes/font_size = 50
text = "Password"

[node name="URLLabel" type="Label" parent="ContentArea/TypeFieldsPanel/LoginFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.049000002
anchor_top = 0.393
anchor_right = 0.049000002
anchor_bottom = 0.393
offset_left = -47.628002
offset_top = 9.436768
offset_right = 48.371998
offset_bottom = 78.4368
theme_override_font_sizes/font_size = 50
text = "URL"

[node name="PasswordRevealButton" type="Button" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.78700006
anchor_top = 0.28
anchor_right = 0.78700006
anchor_bottom = 0.28
offset_left = -64.96405
offset_top = 9.527985
offset_right = 64.03595
offset_bottom = 138.52798
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "üëÅ"

[node name="CopyUsernameButton" type="Button" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.785
anchor_top = 0.094000004
anchor_right = 0.785
anchor_bottom = 0.094000004
offset_left = -63.02002
offset_top = 0.014389038
offset_right = 62.97998
offset_bottom = 129.01439
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "‚ßâ"

[node name="CopyPasswordButton" type="Button" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.27800003
anchor_right = 0.92
anchor_bottom = 0.27800003
offset_left = -65.23999
offset_top = 11.812775
offset_right = 65.76001
offset_bottom = 140.81277
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "‚ßâ"

[node name="CopyURLButton" type="Button" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.78700006
anchor_top = 0.46400002
anchor_right = 0.78700006
anchor_bottom = 0.46400002
offset_left = -64.96405
offset_top = 10.326416
offset_right = 64.03595
offset_bottom = 139.32642
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "‚ßâ"

[node name="LoginSuggestedPasswordEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36400002
anchor_top = 0.68
anchor_right = 0.36400002
anchor_bottom = 0.68
offset_left = -353.808
offset_top = -10.432007
offset_right = 338.192
offset_bottom = 118.56799
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
theme_override_styles/read_only = ExtResource("1_0rx7d")
placeholder_text = "Suggest Password"
editable = false

[node name="LoginGeneratePasswordButton" type="Button" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.157
anchor_top = 0.809
anchor_right = 0.157
anchor_bottom = 0.809
offset_left = -144.604
offset_top = 0.19836426
offset_right = 145.396
offset_bottom = 129.19836
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "Generate"

[node name="LoginCopySuggestedPasswordButton" type="Button" parent="ContentArea/TypeFieldsPanel/LoginFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.77000004
anchor_top = 0.68
anchor_right = 0.77000004
anchor_bottom = 0.68
offset_left = -48.440063
offset_top = -0.43200684
offset_right = 77.55994
offset_bottom = 128.568
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "‚ßâ"

[node name="CreditCardFields" type="Control" parent="ContentArea/TypeFieldsPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardHolderEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.094000004
anchor_right = 0.36
anchor_bottom = 0.094000004
offset_left = -349.92
offset_top = 0.014389038
offset_right = 350.08
offset_bottom = 129.01439
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")

[node name="CardNumberEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.28
anchor_right = 0.36
anchor_bottom = 0.28
offset_left = -349.92
offset_top = -0.47201538
offset_right = 350.08
offset_bottom = 128.52798
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
secret = true

[node name="ExpiryEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.47300002
anchor_right = 0.36
anchor_bottom = 0.47300002
offset_left = -349.92
offset_top = 0.044799805
offset_right = 350.08
offset_bottom = 129.0448
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
placeholder_text = "mm/yy"

[node name="CvvEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.69600004
anchor_right = 0.36
anchor_bottom = 0.69600004
offset_left = -349.92
offset_top = 0.28955078
offset_right = 350.08
offset_bottom = 129.28955
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
secret = true

[node name="CardHolderLabel" type="Label" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149
anchor_top = 0.020000001
anchor_right = 0.149
anchor_bottom = 0.020000001
offset_left = -144.828
offset_top = 0.5519924
offset_right = 145.172
offset_bottom = 69.551994
theme_override_font_sizes/font_size = 50
text = "Card Holder"

[node name="CardNumberLabel" type="Label" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.16800001
anchor_top = 0.21700001
anchor_right = 0.16800001
anchor_bottom = 0.21700001
offset_left = -163.296
offset_top = 0.49917603
offset_right = 162.704
offset_bottom = 69.499176
theme_override_font_sizes/font_size = 50
text = "Card Number"

[node name="ExpiryLabel" type="Label" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.127
anchor_top = 0.393
anchor_right = 0.127
anchor_bottom = 0.393
offset_left = -123.444
offset_top = 12.436768
offset_right = 123.556
offset_bottom = 81.4368
theme_override_font_sizes/font_size = 50
text = "Expiration"

[node name="CvvLabel" type="Label" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.61
anchor_right = 0.048
anchor_bottom = 0.61
offset_left = -46.656002
offset_top = 0.53601074
offset_right = 47.343998
offset_bottom = 69.53601
theme_override_font_sizes/font_size = 50
text = "CVV"

[node name="CardNumberRevealButton" type="Button" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.78700006
anchor_top = 0.27800003
anchor_right = 0.78700006
anchor_bottom = 0.27800003
offset_left = -64.96405
offset_top = 1.8127441
offset_right = 64.03595
offset_bottom = 130.81274
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "üëÅ"

[node name="CvvRevealButton" type="Button" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.78700006
anchor_top = 0.68
anchor_right = 0.78700006
anchor_bottom = 0.68
offset_left = -64.96405
offset_top = 18.567993
offset_right = 64.03595
offset_bottom = 147.568
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "üëÅ"

[node name="CopyCardNumberButton" type="Button" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.91700006
anchor_top = 0.27800003
anchor_right = 0.91700006
anchor_bottom = 0.27800003
offset_left = -65.324036
offset_top = -0.18725586
offset_right = 65.675964
offset_bottom = 128.81274
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "‚ßâ"

[node name="CopyCvvButton" type="Button" parent="ContentArea/TypeFieldsPanel/CreditCardFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.919
anchor_top = 0.68
anchor_right = 0.919
anchor_bottom = 0.68
offset_left = -64.268005
offset_top = 18.567993
offset_right = 63.731995
offset_bottom = 147.568
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "‚ßâ"

[node name="IdentityFields" type="Control" parent="ContentArea/TypeFieldsPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DocumentTypeEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 0.094000004
anchor_right = 0.342
anchor_bottom = 0.094000004
offset_left = -346.424
offset_top = 0.014389038
offset_right = 353.576
offset_bottom = 129.01439
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")

[node name="IDNumberEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34600002
anchor_top = 0.30100003
anchor_right = 0.34600002
anchor_bottom = 0.30100003
offset_left = -350.312
offset_top = -0.46243286
offset_right = 349.688
offset_bottom = 128.53757
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")

[node name="IssuingCountryEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34600002
anchor_top = 0.48600003
anchor_right = 0.34600002
anchor_bottom = 0.48600003
offset_left = -350.312
offset_top = 0.19360352
offset_right = 349.688
offset_bottom = 129.1936
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")

[node name="IDExpiryEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34600002
anchor_top = 0.671
anchor_right = 0.34600002
anchor_bottom = 0.671
offset_left = -350.312
offset_top = 9.849609
offset_right = 349.688
offset_bottom = 138.84961
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
placeholder_text = "mm/yy"

[node name="SSNEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 121.755)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34600002
anchor_top = 0.873
anchor_right = 0.34600002
anchor_bottom = 0.873
offset_left = -350.312
offset_top = 0.08477783
offset_right = 349.688
offset_bottom = 129.08478
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
secret = true

[node name="DocumentTypeLabel" type="Label" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.126
anchor_right = 0.126
offset_left = -122.472
offset_right = -82.472
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "Document Type"

[node name="IDNumberLabel" type="Label" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.21700001
anchor_right = 0.1
anchor_bottom = 0.21700001
offset_left = -97.200005
offset_top = 0.49917603
offset_right = 96.799995
offset_bottom = 69.499176
theme_override_font_sizes/font_size = 50
text = "Address"

[node name="IssuingCountryLabel" type="Label" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.18900001
anchor_top = 0.41400003
anchor_right = 0.18900001
anchor_bottom = 0.41400003
offset_left = -183.70801
offset_top = -0.5536499
offset_right = 183.29199
offset_bottom = 68.44638
theme_override_font_sizes/font_size = 50
text = "Phone Number"

[node name="ExpireyLabel" type="Label" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.068
anchor_top = 0.61
anchor_right = 0.068
anchor_bottom = 0.61
offset_left = -66.096
offset_top = 0.53601074
offset_right = 66.904
offset_bottom = 69.53601
theme_override_font_sizes/font_size = 50
text = "Expiration Date"

[node name="SSNLabel" type="Label" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.298
anchor_top = 0.79300004
anchor_right = 0.298
anchor_bottom = 0.79300004
offset_left = -281.656
offset_top = -0.5232544
offset_right = 279.344
offset_bottom = 68.476746
theme_override_font_sizes/font_size = 50
text = "Social Security Number"

[node name="SsnRevealButton" type="Button" parent="ContentArea/TypeFieldsPanel/IdentityFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.772
anchor_top = 0.85300004
anchor_right = 0.772
anchor_bottom = 0.85300004
offset_left = -64.38403
offset_top = 22.93274
offset_right = 64.61597
offset_bottom = 151.93274
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "üëÅ"

[node name="SecureNoteFields" type="Control" parent="ContentArea/TypeFieldsPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NoteTitleEdit" type="LineEdit" parent="ContentArea/TypeFieldsPanel/SecureNoteFields"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.094000004
anchor_right = 0.36
anchor_bottom = 0.094000004
offset_left = -349.92
offset_top = 0.014389038
offset_right = 350.08
offset_bottom = 129.01439
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")

[node name="NoteBodyEdit" type="TextEdit" parent="ContentArea/TypeFieldsPanel/SecureNoteFields"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.28800002
anchor_right = 0.5
anchor_bottom = 0.28800002
offset_left = -486.0
offset_top = 14.388763
offset_right = 486.0
offset_bottom = 755.3888
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")

[node name="Title Label" type="Label" parent="ContentArea/TypeFieldsPanel/SecureNoteFields"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "Title"

[node name="BodyLabel" type="Label" parent="ContentArea/TypeFieldsPanel/SecureNoteFields"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.063
anchor_top = 0.20700002
anchor_right = 0.063
anchor_bottom = 0.20700002
offset_left = -61.236
offset_top = 11.923172
offset_right = 60.764
offset_bottom = 80.92317
theme_override_font_sizes/font_size = 50
text = "Body"

[node name="BottomBar" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SaveButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.105000004
anchor_top = 0.5
anchor_right = 0.105000004
anchor_bottom = 0.5
offset_left = -0.40000153
offset_top = -64.0
offset_right = 230.6
offset_bottom = 65.0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "Save"

[node name="DeleteButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -64.0
offset_right = 111.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "Delete"

[node name="CancelButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.88900006
anchor_top = 0.50200003
anchor_right = 0.88900006
anchor_bottom = 0.50200003
offset_left = -220.12006
offset_top = -64.576004
offset_right = -0.12005615
offset_bottom = 64.423996
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_0rx7d")
text = "Cancel"
